# OOPQuizBot

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  Readme.txt  config.json  render.yaml
.github/workflows/: apply-and-report.yml  apply-oopkit.yml  gh-pages.yml
config/: config.json
data/: announcements.json  leaderboard.json  quizzes.json  uploads.json  users.json
data/quizzes/: chapter1.json  chapter10.json  chapter11.json  chapter12.json  chapter13.json  chapter14.json  chapter2.json  chapter3.json  chapter4.json  chapter5.json  chapter6.json  chapter7.json  chapter8.json  chapter9.json
docs/: account.html  ai.html  announcements.html  app.js  ask-ai.html  founder.html  founders.html  index.html  leaderboard.html  login.html  notebook.css  notebook.html  notebook.js  quiz.html  revise.html  script.js  style.css  theme.js
docs/assets/: hero.avif  vision_car.avif
docs/assets/css/: kebab.css  notebook-fixes.css
docs/assets/js/: announcements.js  nav-fix.js  notebook-fixes.js
docs/data/: announcements.json  leaderboard.json  profiles.json
include/: AIHelper.h  Announcement.h  Auth.h  AuthController.h  BotBase.h  NoteModule.h  OOPQuizBot.h  Question.h  QuizModule.h  Roles.h  User.h  UtilJson.h
public/: account.html  announcements.html  app.js  ask-ai.html  founders.html  index.html  leaderboard.html  login.html  login.js  main.html  notebook.css  notebook.html  notebook.js  quiz.html  revise.html  style.css
public/assets/: team_mahi.avif  team_moshiour.avif  team_siam.avif
public/assets/css/: kebab.css  notebook-fixes.css
public/assets/js/: account.js  announcements.js  app.js  leaderboard.js  nav-fix.js  notebook-fixes.js
scripts/: README.txt  generate_questions_offline.py  import_questions_template.csv  make_questions.py
src/: AIHelper.cpp  AuthController.cpp  AuthController.h  BotBase.cpp  NoteModule.cpp  OOPQuizBot.cpp  QuizModule.cpp  UtilJson.cpp  UtilJson.h  main.cpp
tools/: make_questions.py
